# deflate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deflate.c
.github/workflows/: cmake.yml
debian/: changelog  control
package/utils/deflate/: Makefile
